Fixed center align

--- a/public/css/create.css
+++ b/public/css/create.css
@@ -7,6 +7,9 @@ body {
     font-family: 'Montserrat';
     text-align: center;
     filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.502));
+    max-width: 650px;    
+    margin: 0 auto;       
+    padding: 0 16px;
 }
 
 #cent {
@@ -14,7 +17,8 @@ body {
     box-sizing: content-box;
     width: 525px;
     height: 425px;
-    padding: 30px;  
+    padding: 30px;
+    margin: 50px 38px;
     border: 5px solid #a4e1e8;
     display: grid;
     grid-gap: 1rem;
@@ -23,8 +27,7 @@ body {
     border-radius: 25px;
     position: absolute;
 	overflow: visible;
-	left: 675px;
-    top: 200px;
+
     text-align: center;
     
   }
